<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvBookingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buchung"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingBottom="12dp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/startdatum_yyyy_mm_dd"
            android:inputType="text"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/etEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enddatum_yyyy_mm_dd"
            android:inputType="text"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/btnFinishBooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buchung_abschlie_en"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </LinearLayout>
</ScrollView>